packages/components/src/theme/form.scss
.form-modal {
    width: 65%;
}

.form-group-collapsed {
  margin-bottom: 0;
}

.form-group-expanded {
  margin-bottom: 22px;
}

.insert--sequence-container {
  padding: 15px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.field-edit-container {
  color: gray;
}

.field-edit--input-container {
  float: left;
  width: 70%;
  padding: 0 15px;
}

.field-edit--btn-group {
  float: left;
  display: block;
}

.input-group-align {
    display: inline;
}

// Truncate overflow
.text__truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.text__truncate-and-wrap {
    overflow: hidden;
    text-overflow: ellipsis;
}

.text__wrap {
    word-wrap: break-word;
}

// Display tooltips on disabled buttons
// this is borrowed from here https://github.com/pastaclub/react-bootstrap-tooltip-button
.disabled-button-with-tooltip {
  // intended styling for helper div itself
  display: inline-block;
  vertical-align: top;
  cursor: not-allowed;

    // disable events on button
  button {
    pointer-events: none;
  }


   // fix styling of buttons in ButtonGroups and ButtonToolbars which got broken by inserting another div
  .btn-group-vertical>&, .btn-group>& {
    float: left;
    position: relative;
  }

  .btn-toolbar & {
    float: left;
  }

  .btn-toolbar > & {
    margin-left: 5px;
  }

  .btn-group>&:first-child:not(:last-child)>.btn:not(.dropdown-toggle) {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  .btn-group>&:last-child:not(:first-child)>.btn, .btn-group>&:not(:first-child)>.dropdown-toggle {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }

  .btn-group .btn+&, .btn-group &+.btn, .btn-group &+&, .btn-group &+.btn-group, .btn-group .btn-group+& {
    margin-left: -1px;
  }
}

.disabled-button-in-group {
    border-radius: 0;
}

.disabled-button-group-spacer {
    border-width: 0 1px;
    padding: 6px;
    line-height: 12px;
}

.form-step {
  display: none;

  &.active {
    display: block;
  }
}

.import-panel .list-group {
    margin-bottom: 15px;
}

.form-step-tab {
  float: left;
  padding: 10px 15px;
  border: none;
  border-radius: 0;
  margin-right: 15px;
  cursor: pointer;
  background-color: #eeeeee;

  &:hover {
      background-color: white;
  }

  &.list-group-item, &.list-group-item:last-child, &.list-group-item:first-child {
    margin-bottom: 0;
    border-radius: 4px 4px 0 0;
    border-bottom: 3px solid white;
    &:hover {
      border-bottom:  3px solid $brand-secondary;
    }
  }

  &.list-group-item.active {
      &:hover {
          border-bottom: 3px solid white
      }
  }
}


.wizard-row--container {
  margin-bottom: 15px;
  cursor: default;
}

.wizard-row--spacer {
  padding-left: 35px;
}

.add-row--container {
  position: relative;
}

.translator--toggle__wizard {
  color: #3495D2;
}

.container--action-button {
  cursor: pointer;
}

.container--toolbar-button {
  display: inline-block;
  padding-right: 5px;
}

.container--removal-icon {
  color: lightgrey;
}

.container--addition-icon {
  color: $brand-success;
}

// CreatedModified component

.cbmb-inline {
  display: inline-block;
  margin-right: 10px;
}

div.react-datepicker-time__header,
div.react-datepicker,
div.react-datepicker__current-month {
    font-size: 14px;
}
.react-datepicker-popper {
    // The default z-index is 1, but bootstrap sets the z-index for form inputs to 2, which means all form inputs render
    // on top of the date-picker by default, which makes it hard to use in some situations.
    z-index: 10;
}
.add-control--error-message {
    padding-top: 5px;
}

.entity-form--headerhelp {
    color: grey;
    padding-bottom: 15px;
    font-size: 13px;
}

textarea.form-control {
    resize: vertical;
    min-height: 54px;
}

.textarea-fullwidth {
    width: 100%;
}

.color-picker {
    position: relative;
};
.color-picker__button > i {
    display: inline-block;
    margin-left: 0.5em;
}
.color-picker__chip {
    display: inline-block;
    height: 32px;
    margin-left: 2em;
    border-radius: 4px;
    border: solid 1px $gray;
    width: 32px;
    vertical-align: middle;
}
.color-picker__chip-small {
    display: inline-block;
    height: 16px;
    margin-left: 1em;
    border-radius: 2px;
    border: solid 1px $gray;
    width: 16px;
    vertical-align: middle;
}
.color-picker__picker {
    position: absolute;
    top: 48px;
    left: 0;
    z-index: 100;
}
.color-picker__mask {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}
.color-picker__remove {
    display: inline-block;
    padding-left: 4px;
}

.color-icon__circle-small {
    display: inline-block;
    border-radius: 50%;
    border: solid 1px $gray;
    height: 12px;
    width: 12px;
}

.color-icon__circle {
    display: inline-block;
    border-radius: 50%;
    border: solid 1px $gray;
    height: 16px;
    width: 16px;
}

.content-form {
    label {
        font-weight: normal;
    }
}

.required-symbol {
    margin-left: 4px;
}

// Borrowed from here: https://css-tricks.com/auto-growing-inputs-textareas/#aa-other-ideas
.input-sizer {
    display: inline-grid;
    height: 34px;
    &::after,
    input {
        width: auto;
        grid-area: 1 / 2;
        resize: none;
        margin: 0;
    }

    &::after {
        content: attr(data-value) ' ';
        visibility: hidden;
        white-space: pre-wrap;
    }
}

.inline-confirmation {
    .alert-button {
        padding: 0 12px;
    }
}

.inline-confirmation__label {
    font-style: italic;
}

.form-buttons {
    display: flex;
    width: 100%;
}
.form-buttons--sticky {
    background-color: $white;
    border-top: 1px solid #E5E5E5;
    bottom: 0;
    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
    left: 0;
    margin: 0;
    padding: 16px 22px;
    position: fixed;
    z-index: 10;
}
.form-buttons__left {
    flex: 1;
}
.form-buttons__right {
    display: flex;
    gap: 8px;
}

.modal-footer .form-buttons {
    // Bootstrap wants all modal buttons on the right side of the footer, so we need to override that.
    text-align: left;
}

